# spotify-data-engineer

./: .gitignore  README.md  pyproject.toml
dataiku/: Exercice_dataiku.pptx
jupyter/: spotify_claude.ipynb
src/spotify_data_engineer/: spotify_analyse.py
tests/: test_spotify_analyse.py
tests/samples/: df_artist_popularity.csv  df_artist_to_be_in.csv  df_artist_to_be_out.csv  df_artist_to_insert.csv  df_artist_to_stay.csv  df_playlist_artist_inout.csv  df_playlist_artist_inout_old.csv  df_spotify_retieved_datas_claude.csv  expected.csv  return_value.csv
